--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dio: ^5.1.1
   riverpod_annotation: ^2.0.4
   flutter_staggered_grid_view: ^0.6.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
