--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   equatable: ^2.0.5
 
 dev_dependencies:
+  mockito: ^5.4.0
   flutter_test:
     sdk: flutter
   build_runner: ^2.3.3
